--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,6 @@
 package: github.com/edgexfoundry/edgex-go
+ignore:
+  - github.com/objectbox/objectbox-go
 import:
 - package: github.com/BurntSushi/toml
   version: a368813c5e648fee92e5f6c30e3944ff9d5e8895
