make ObjectBox default DB provider

--- a/cmd/support-logging/res/configuration.toml
+++ b/cmd/support-logging/res/configuration.toml
@@ -29,4 +29,4 @@ File = './logs/edgex-support-logging.log'
   Port = 27017
   Username = ''
   Timeout = 5000
-  Type = 'mongodb'
+  Type = 'objectbox'
