--- a/cmd/core-data/res/configuration.toml
+++ b/cmd/core-data/res/configuration.toml
@@ -45,7 +45,7 @@ File = './logs/edgex-core-data.log'
   Port = 27017
   Username = ''
   Timeout = 5000
-  Type = 'mongodb'
+  Type = 'objectbox'
 
 [MessageQueue]
 Protocol = 'tcp'
