--- a/cmd/core-metadata/res/configuration.toml
+++ b/cmd/core-metadata/res/configuration.toml
@@ -39,7 +39,7 @@ File = './logs/edgex-core-metadata.log'
   Port = 27017
   Username = ''
   Timeout = 5000
-  Type = 'mongodb'
+  Type = 'objectbox'
 
 [Notifications]
 PostDeviceChanges = true
