--- a/cmd/support-logging/res/docker/configuration.toml
+++ b/cmd/support-logging/res/docker/configuration.toml
@@ -29,4 +29,4 @@ File = '/edgex/logs/edgex-support-logging.log'
   Port = 27017
   Username = 'logging'
   Timeout = 5000
-  Type = 'mongodb'
+  Type = 'objectbox'
