--- a/cmd/support-notifications/res/configuration.toml
+++ b/cmd/support-notifications/res/configuration.toml
@@ -36,7 +36,7 @@ File = './logs/edgex-support-notifications.log'
   Port = 27017
   Username = ''
   Timeout = 5000
-  Type = 'mongodb'
+  Type = 'objectbox'
 
 [Smtp]
 Host = 'smtp.gmail.com'
