--- a/cmd/support-scheduler/res/configuration.toml
+++ b/cmd/support-scheduler/res/configuration.toml
@@ -36,7 +36,7 @@ File = './logs/edgex-support-scheduler.log'
   Port = 27017
   Username = ''
   Timeout = 5000
-  Type = 'mongodb'
+  Type = 'objectbox'
 
 [Intervals]
     [Intervals.Midnight]
