--- a/cmd/Dockerfile
+++ b/cmd/Dockerfile
@@ -10,6 +10,8 @@
 FROM golang:1.11-stretch AS builder
 ARG service
 
+RUN apt-get update && apt-get install -y libzmq3-dev
+
 ENV GO111MODULE=on
 WORKDIR /go/src/github.com/edgexfoundry/edgex-go
 
