update objectbox download script

--- a/cmd/_common/Dockerfile
+++ b/cmd/_common/Dockerfile
@@ -1,7 +1,7 @@
 # Common Dockerfile loads all the modules
 # Copyright (c) 2019 ObjectBox
 
-FROM golang:1.12-stretch
+FROM golang:1.11-stretch
 ARG service
 
 RUN apt-get update && apt-get install -y libzmq3-dev
@@ -13,5 +13,5 @@ COPY go.mod .
 COPY go.sum .
 RUN go mod download
 
-COPY ./objectbox-download.sh .
+COPY ./cmd/_common/objectbox-download.sh .
 RUN ./objectbox-download.sh --install 0.5
