add docker-compose file & a Dockerfile for the shared "volume" container; set DB paths to store in the shared volume

--- a/cmd/core-data/res/docker/configuration.toml
+++ b/cmd/core-data/res/docker/configuration.toml
@@ -39,7 +39,7 @@ File = '/edgex/logs/edgex-core-data.log'
 
 [Databases]
   [Databases.Primary]
-  Name = 'coredata'
+  Name = '/data/db/coredata'
   Type = 'objectbox'
 
 [MessageQueue]
