--- a/cmd/export-client/res/docker/configuration.toml
+++ b/cmd/export-client/res/docker/configuration.toml
@@ -34,6 +34,6 @@ File = '/edgex/logs/edgex-export-client.log'
 
 [Databases]
   [Databases.Primary]
-  Name = 'exportclient'
+  Name = '/data/db/exportclient'
   Type = 'objectbox'
 
