--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: edgexfoundry
+name: edgex-objectbox
 base: core18
 adopt-info: version
 summary: Open-source framework for IoT edge computing
@@ -181,7 +181,7 @@ apps:
     # https://github.com/edgexfoundry/edgex-go/issues/1306
     stop-timeout: 10s
   core-metadata:
-    adapter: none
+    adapter: full
     after:
       - core-config-seed
 #      - mongo-worker
@@ -211,7 +211,7 @@ apps:
     plugs: [network, network-bind]
     stop-timeout: 10s
   support-notifications:
-    adapter: none
+    adapter: full
     after:
       - core-config-seed
 #      - mongo-worker
@@ -221,7 +221,7 @@ apps:
     plugs: [network, network-bind]
     stop-timeout: 10s
   support-scheduler:
-    adapter: none
+    adapter: full
     after:
       - core-config-seed
 #      - mongo-worker
@@ -241,7 +241,7 @@ apps:
     daemon: simple
     plugs: [network, network-bind]
   export-client:
-    adapter: none
+    adapter: full
     after:
       - core-config-seed
 #      - mongo-worker
@@ -343,7 +343,7 @@ parts:
     source: https://github.com/objectbox/objectbox-c.git
     after: [curl]
     override-build: |
-      echo "N" | ./download.sh 0.6
+      echo "N" | ./download.sh 0.6.0
       mv lib "$SNAPCRAFT_PART_INSTALL/lib"
     prime:
       - lib/libobjectbox.so
