correct support-logging docker config file

--- a/cmd/support-logging/res/docker/configuration.toml
+++ b/cmd/support-logging/res/docker/configuration.toml
@@ -20,3 +20,9 @@ Type = 'consul'
 
 [Logging]
 File = '/edgex/logs/edgex-support-logging.log'
+
+# currently unused but required for clean startup even with Persistence = 'file'
+[Databases]
+  [Databases.Primary]
+  Name = 'logging'
+  Type = 'objectbox'
