--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -19,13 +19,18 @@ volumes:
   consul-config:
   consul-data:
   portainer_data:
+  vault-config:
+  vault-file:
+  vault-logs:
 
 services:
   volume:
-    image: objectboxio/edge-volume:1.0.0-dev
+    image: objectboxio/edge-volume:1.0.2
     container_name: edgex-files
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+            - edgex-files
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -33,7 +38,7 @@ services:
       - consul-data:/consul/data
 
   consul:
-    image: consul:1.1.0
+    image: consul:1.3.1
     ports:
       - "8400:8400"
       - "8500:8500"
@@ -43,7 +48,7 @@ services:
     networks:
       edgex-network:
         aliases:
-          - edgex-core-consul
+            - edgex-core-consul
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -53,13 +58,13 @@ services:
       - volume
 
   config-seed:
-    image: objectboxio/edge-core-config-seed:1.0.0-dev
+    image: objectboxio/edge-core-config-seed:1.0.2
     container_name: edgex-config-seed
     hostname: edgex-core-config-seed
     networks:
       edgex-network:
         aliases:
-          - edgex-core-config-seed
+            - edgex-core-config-seed
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -69,14 +74,144 @@ services:
       - volume
       - consul
 
+  vault:
+    image: edgexfoundry/docker-edgex-vault:1.0.0
+    container_name: edgex-vault
+    hostname: edgex-vault
+    networks:
+      edgex-network:
+        aliases:
+            - edgex-vault
+    ports:
+      - "8200:8200"
+    cap_add:
+      - "IPC_LOCK"
+    command: "server -log-level=info"
+    environment:
+      - 'VAULT_ADDR=https://edgex-vault:8200'
+      - 'VAULT_CONFIG_DIR=/vault/config'
+      - 'VAULT_UI=true'
+    volumes:
+      - vault-config:/vault/config
+      - vault-file:/vault/file
+      - vault-logs:/vault/logs
+    depends_on:
+      - volume
+      - consul
+
+  vault-worker:
+    image: edgexfoundry/docker-edgex-vault-worker-go:1.0.0
+    container_name: edgex-vault-worker
+    hostname: edgex-vault-worker
+    command: ["--init=true", "--debug=false", "--wait=10", "--insureskipverify=false"]
+    networks:
+      edgex-network:
+        aliases:
+            - edgex-vault-worker
+    volumes:
+      - vault-config:/vault/config
+    depends_on:
+      - volume
+      - consul
+      - vault
+
+# containers for reverse proxy
+  kong-db:
+    image: "postgres:9.6"
+    container_name: kong-db
+    hostname: kong-db
+    networks:
+      edgex-network:
+        aliases:
+            - kong-db
+    ports:
+        - "5432:5432"
+    environment:
+        - 'POSTGRES_DB=kong'
+        - 'POSTGRES_USER=kong'
+
+  kong-migrations:
+    image: "kong:1.0.3"
+    container_name: kong-migration
+    hostname: kong-migration
+    networks:
+      edgex-network:
+        aliases:
+            - kong-migration
+    environment:
+        - 'KONG_DATABASE=postgres'
+        - 'KONG_PG_HOST=kong-db'
+    command: "kong migrations bootstrap"
+
+  kong:
+    image: "kong:1.0.3"
+    container_name: kong
+    hostname: kong
+    networks:
+      edgex-network:
+        aliases:
+            - kong
+    ports:
+        - "8000:8000"
+        - "8001:8001"
+        - "8443:8443"
+        - "8444:8444"
+    environment:
+        - 'KONG_DATABASE=postgres'
+        - 'KONG_PG_HOST=kong-db'
+        - 'KONG_PROXY_ACCESS_LOG=/dev/stdout'
+        - 'KONG_ADMIN_ACCESS_LOG=/dev/stdout'
+        - 'KONG_PROXY_ERROR_LOG=/dev/stderr'
+        - 'KONG_ADMIN_ERROR_LOG=/dev/stderr'
+        - 'KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl'
+    depends_on:
+        - kong-db
+
+  edgex-proxy:
+    image: "edgexfoundry/docker-edgex-proxy-go:1.0.0"
+    container_name: edgex-proxy
+    hostname: edgex-proxy
+    networks:
+      edgex-network:
+        aliases:
+            - edgex-proxy
+    volumes:
+        - vault-config:/vault/config
+    depends_on:
+        - vault
+        - kong-db
+        - kong
+
+# end of containers for reverse proxy
+
+#  mongo:
+#    image: edgexfoundry/docker-edgex-mongo:1.0.1
+#    ports:
+#      - "27017:27017"
+#    container_name: edgex-mongo
+#    hostname: edgex-mongo
+#    networks:
+#      edgex-network:
+#        aliases:
+#            - edgex-mongo
+#    volumes:
+#      - db-data:/data/db
+#      - log-data:/edgex/logs
+#      - consul-config:/consul/config
+#      - consul-data:/consul/data
+#    depends_on:
+#      - volume
+
   logging:
-    image: objectboxio/edge-support-logging:1.0.0-dev
+    image: objectboxio/edge-support-logging:1.0.2
     ports:
       - "48061:48061"
     container_name: edgex-support-logging
     hostname: edgex-support-logging
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+            - edgex-support-logging
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -86,14 +221,35 @@ services:
       - config-seed
       - volume
 
+  system:
+    image: objectboxio/edge-sys-mgmt-agent:1.0.2
+    ports:
+      - "48090:48090"
+    container_name: edgex-sys-mgmt-agent
+    hostname: edgex-sys-mgmt-agent
+    networks:
+      edgex-network:
+        aliases:
+            - edgex-sys-mgmt-agent
+    volumes:
+      - db-data:/data/db
+      - log-data:/edgex/logs
+      - consul-config:/consul/config
+      - consul-data:/consul/data
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - logging
+
   notifications:
-    image: objectboxio/edge-support-notifications:1.0.0-dev
+    image: objectboxio/edge-support-notifications:1.0.2
     ports:
       - "48060:48060"
     container_name: edgex-support-notifications
     hostname: edgex-support-notifications
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+            - edgex-support-notifications
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -103,13 +259,15 @@ services:
       - logging
 
   metadata:
-    image: objectboxio/edge-core-metadata:1.0.0-dev
+    image: objectboxio/edge-core-metadata:1.0.2
     ports:
       - "48081:48081"
     container_name: edgex-core-metadata
     hostname: edgex-core-metadata
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+            - edgex-core-metadata
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -119,14 +277,16 @@ services:
       - logging
 
   data:
-    image: objectboxio/edge-core-data:1.0.0-dev
+    image: objectboxio/edge-core-data:1.0.2
     ports:
       - "48080:48080"
       - "5563:5563"
     container_name: edgex-core-data
     hostname: edgex-core-data
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+            - edgex-core-data
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -136,13 +296,15 @@ services:
       - logging
 
   command:
-    image: objectboxio/edge-core-command:1.0.0-dev
+    image: objectboxio/edge-core-command:1.0.2
     ports:
       - "48082:48082"
     container_name: edgex-core-command
     hostname: edgex-core-command
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+            - edgex-core-command
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -152,13 +314,15 @@ services:
       - metadata
 
   scheduler:
-    image: objectboxio/edge-support-scheduler:1.0.0-dev
+    image: objectboxio/edge-support-scheduler:1.0.2
     ports:
       - "48085:48085"
     container_name: edgex-support-scheduler
     hostname: edgex-support-scheduler
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+            - edgex-support-scheduler
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -168,13 +332,15 @@ services:
       - metadata
 
   export-client:
-    image: objectboxio/edge-export-client:1.0.0-dev
+    image: objectboxio/edge-export-client:1.0.2
     ports:
       - "48071:48071"
     container_name: edgex-export-client
     hostname: edgex-export-client
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+            - edgex-export-client
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -182,19 +348,18 @@ services:
       - consul-data:/consul/data
     depends_on:
       - data
-    environment:
-      - EXPORT_CLIENT_DISTRO_HOST=export-distro
-      - EXPORT_CLIENT_CONSUL_HOST=edgex-config-seed
 
   export-distro:
-    image: objectboxio/edge-export-distro:1.0.0-dev
+    image: objectboxio/edge-export-distro:1.0.2
     ports:
       - "48070:48070"
       - "5566:5566"
     container_name: edgex-export-distro
     hostname: edgex-export-distro
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+            - edgex-export-distro
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -209,18 +374,136 @@ services:
       - EXPORT_DISTRO_MQTTS_CERT_FILE=none
       - EXPORT_DISTRO_MQTTS_KEY_FILE=none
 
-  #################################################################
-  # Device Services
-  #################################################################
+  rulesengine:
+    image: edgexfoundry/docker-support-rulesengine:1.0.0
+    ports:
+      - "48075:48075"
+    container_name: edgex-support-rulesengine
+    hostname: edgex-support-rulesengine
+    networks:
+      edgex-network:
+        aliases:
+            - edgex-support-rulesengine
+    volumes:
+      - db-data:/data/db
+      - log-data:/edgex/logs
+      - consul-config:/consul/config
+      - consul-data:/consul/data
+    depends_on:
+      - export-client
+
+#################################################################
+# Device Services
+#################################################################
 
   device-virtual:
-    image: edgexfoundry/docker-device-virtual:0.6.0
+    image: edgexfoundry/docker-device-virtual-go:1.0.0
     ports:
-      - "49990:49990"
+    - "49990:49990"
     container_name: edgex-device-virtual
     hostname: edgex-device-virtual
     networks:
-      - edgex-network
+      edgex-network:
+        aliases:
+        - edgex-device-virtual
+    volumes:
+    - db-data:/data/db
+    - log-data:/edgex/logs
+    - consul-config:/consul/config
+    - consul-data:/consul/data
+    depends_on:
+    - data
+    - command
+
+  # device-random:
+  #   image: edgexfoundry/docker-device-random-go:1.0.0
+  #   ports:
+  #     - "49988:49988"
+  #   container_name: edgex-device-random
+  #   hostname: edgex-device-random
+  #   networks:
+  #     edgex-network:
+  #       aliases:
+  #           - edgex-device-random
+  #   volumes:
+  #     - db-data:/data/db
+  #     - log-data:/edgex/logs
+  #     - consul-config:/consul/config
+  #     - consul-data:/consul/data
+  #   depends_on:
+  #     - data
+  #     - command
+  #
+  # device-mqtt:
+  #   image: edgexfoundry/docker-device-mqtt-go:1.0.0
+  #   ports:
+  #     - "49982:49982"
+  #   container_name: edgex-device-mqtt
+  #   hostname: edgex-device-mqtt
+  #   networks:
+  #     edgex-network:
+  #       aliases:
+  #           - edgex-device-mqtt
+  #   volumes:
+  #     - db-data:/data/db
+  #     - log-data:/edgex/logs
+  #     - consul-config:/consul/config
+  #     - consul-data:/consul/data
+  #   depends_on:
+  #     - data
+  #     - command
+  #
+  # device-modbus:
+  #   image: edgexfoundry/docker-device-modbus-go:1.0.0
+  #   ports:
+  #     - "49991:49991"
+  #   container_name: edgex-device-modbus
+  #   hostname: edgex-device-modbus
+  #   networks:
+  #     edgex-network:
+  #       aliases:
+  #           - edgex-device-modbus
+  #   volumes:
+  #     - db-data:/data/db
+  #     - log-data:/edgex/logs
+  #     - consul-config:/consul/config
+  #     - consul-data:/consul/data
+  #   depends_on:
+  #     - data
+  #     - command
+  #
+  # device-snmp:
+  #   image: edgexfoundry/docker-device-snmp-go:1.0.0
+  #   ports:
+  #     - "49993:49993"
+  #   container_name: edgex-device-snmp
+  #   hostname: edgex-device-snmp
+  #   networks:
+  #     edgex-network:
+  #       aliases:
+  #           - edgex-device-snmp
+  #   volumes:
+  #     - db-data:/data/db
+  #     - log-data:/edgex/logs
+  #     - consul-config:/consul/config
+  #     - consul-data:/consul/data
+  #   depends_on:
+  #     - data
+  #     - command
+
+#################################################################
+# UIs
+#################################################################
+  ui:
+    image: edgexfoundry/docker-edgex-ui-go:1.0.0
+    ports:
+      - "4000:4000"
+    container_name: edgex-ui-go
+    hostname: edgex-ui-go
+    networks:
+      edgex-network:
+        aliases:
+            - edgex-ui-go
     volumes:
       - db-data:/data/db
       - log-data:/edgex/logs
@@ -230,154 +513,9 @@ services:
       - data
       - command
 
-  #  device-random:
-  #    image: edgexfoundry/docker-device-random-go:0.7.1
-  #    ports:
-  #      - "49988:49988"
-  #    container_name: edgex-device-random
-  #    hostname: edgex-device-random
-  #    networks:
-  #      - edgex-network
-  #    volumes:
-  #      - db-data:/data/db
-  #      - log-data:/edgex/logs
-  #      - consul-config:/consul/config
-  #      - consul-data:/consul/data
-  #    depends_on:
-  #      - data
-  #      - command
-
-  #  device-mqtt:
-  #    image: edgexfoundry/docker-device-mqtt-go:0.7.1
-  #    ports:
-  #      - "49982:49982"
-  #    container_name: edgex-device-mqtt
-  #    hostname: edgex-device-mqtt
-  #    networks:
-  #      - edgex-network
-  #    volumes:
-  #      - db-data:/data/db
-  #      - log-data:/edgex/logs
-  #      - consul-config:/consul/config
-  #      - consul-data:/consul/data
-  #    depends_on:
-  #      - data
-  #      - command
-
-  #  device-modbus:
-  #    image: edgexfoundry/docker-device-modbus-go:0.7.1
-  #    ports:
-  #      - "49991:49991"
-  #    container_name: edgex-device-modbus
-  #    hostname: edgex-device-modbus
-  #    networks:
-  #      - edgex-network
-  #    volumes:
-  #      - db-data:/data/db
-  #      - log-data:/edgex/logs
-  #      - consul-config:/consul/config
-  #      - consul-data:/consul/data
-  #    depends_on:
-  #      - data
-  #      - command
-
-  #   device-bluetooth:
-  #     image: nexus3.edgexfoundry.org:10004/docker-device-bluetooth:0.6.0
-  #     ports:
-  #       - "49988:49988"
-  #       - "5000:5000"
-  #     container_name: edgex-device-bluetooth
-  #     hostname: edgex-device-bluetooth
-  #     privileged: true
-  #     network_mode: "host"
-  #     cap_add:
-  #       - NET_ADMIN
-  # #    networks:
-  # #      - edgex-network
-  #    volumes:
-  #      - db-data:/data/db
-  #      - log-data:/edgex/logs
-  #      - consul-config:/consul/config
-  #      - consul-data:/consul/data
-  #     depends_on:
-  #       - data
-  #       - command
-
-  #   device-snmp:
-  #     image: nexus3.edgexfoundry.org:10004/docker-device-snmp:0.6.0
-  #     ports:
-  #       - "49989:49989"
-  #     container_name: edgex-device-snmp
-  #     hostname: edgex-device-snmp
-  #     networks:
-  #       - edgex-network
-  #    volumes:
-  #      - db-data:/data/db
-  #      - log-data:/edgex/logs
-  #      - consul-config:/consul/config
-  #      - consul-data:/consul/data
-  #     depends_on:
-  #       - data
-  #       - command
-
-  #   device-fischertechnik:
-  #     image: nexus3.edgexfoundry.org:10004/docker-device-fischertechnik:0.6.0
-  #     ports:
-  #       - "49985:49985"
-  #     container_name: edgex-device-fischertechnik
-  #     networks:
-  #       - edgex-network
-  #    volumes:
-  #      - db-data:/data/db
-  #      - log-data:/edgex/logs
-  #      - consul-config:/consul/config
-  #      - consul-data:/consul/data
-  #     privileged: true
-  #     depends_on:
-  #       - data
-  #       - command
-
-  #   device-bacnet:
-  #     image: nexus3.edgexfoundry.org:10004/docker-device-bacnet:0.6.0
-  #     ports:
-  #       - "49986:49986"
-  #       - "5002:5002"
-  #     container_name: edgex-device-bacnet
-  #     hostname: edgex-device-bacnet
-  #     networks:
-  #       - edgex-network
-  #    volumes:
-  #      - db-data:/data/db
-  #      - log-data:/edgex/logs
-  #      - consul-config:/consul/config
-  #      - consul-data:/consul/data
-  #    depends_on:
-  #       - data
-  #       - command
-
-  #################################################################
-  # UIs
-  #################################################################
-  #  ui:
-  #    image: edgexfoundry/docker-edgex-ui-go:0.1.1
-  #    ports:
-  #      - "4000:4000"
-  #    container_name: edgex-ui-go
-  #    hostname: edgex-ui-go
-  #    networks:
-  #      - edgex-network
-  #    volumes:
-  #      - db-data:/data/db
-  #      - log-data:/edgex/logs
-  #      - consul-config:/consul/config
-  #      - consul-data:/consul/data
-  #    depends_on:
-  #      - data
-  #      - command
-
-  #################################################################
-  # Tooling
-  #################################################################
+#################################################################
+# Tooling
+#################################################################
 
   portainer:
     image:  portainer/portainer
