update db config in commands

--- a/cmd/core-command/res/configuration.toml
+++ b/cmd/core-command/res/configuration.toml
@@ -34,13 +34,8 @@ File = './logs/edgex-core-command.log'
 
 [Databases]
   [Databases.Primary]
-  Host = 'localhost'
-  Name = 'metadata'
-  Password = ''
-  Port = 27017
-  Username = ''
-  Timeout = 5000
-  Type = 'mongodb'
+  Name = 'corecommand'
+  Type = 'objectbox'
 
 [SecretStore]
 Host = 'localhost'
