--- a/cmd/core-command/res/docker/configuration.toml
+++ b/cmd/core-command/res/docker/configuration.toml
@@ -34,13 +34,8 @@ File = '/edgex/logs/edgex-core-command.log'
 
 [Databases]
   [Databases.Primary]
-  Host = 'edgex-mongo'
-  Name = 'metadata'
-  Password = 'password'
-  Port = 27017
-  Username = 'meta'
-  Timeout = 5000
-  Type = 'mongodb'
+  Name = '/data/db/corecommand'
+  Type = 'objectbox'
 
 [SecretStore]
 Host = 'edgex-vault'
