--- a/cmd/support-logging/res/docker/configuration.toml
+++ b/cmd/support-logging/res/docker/configuration.toml
@@ -24,7 +24,7 @@ File = '/edgex/logs/edgex-support-logging.log'
 # currently unused but required for clean startup even with Persistence = 'file'
 [Databases]
   [Databases.Primary]
-  Name = 'logging'
+  Name = '/data/db/logging'
   Type = 'objectbox'
 
 [SecretStore]
