--- a/bin/docker-compose.yml
+++ b/bin/docker-compose.yml
@@ -134,7 +134,7 @@ services:
 
 # containers for reverse proxy
   kong-db:
-    image: "postgres:9.6"
+    image: postgres:9.6
     container_name: kong-db
     hostname: kong-db
     networks:
@@ -148,7 +148,7 @@ services:
         - 'POSTGRES_USER=kong'
 
   kong-migrations:
-    image: "kong:1.3.0"
+    image: kong:1.3.0
     container_name: kong-migrations
     networks:
       edgex-network:
@@ -175,7 +175,7 @@ services:
       - consul
 
   kong:
-    image: "kong:1.3.0"
+    image: kong:1.3.0
     container_name: kong
     hostname: kong
     networks:
@@ -232,7 +232,7 @@ services:
 # end of containers for reverse proxy
 
 #  mongo:
-#    image: nexus3.edgexfoundry.org:10004/docker-edgex-mongo:1.1.0
+#    image: edgexfoundry/docker-edgex-mongo:1.1.0
 #    ports:
 #      - "27017:27017"
 #    container_name: edgex-mongo
@@ -373,7 +373,7 @@ services:
       - metadata
 
 #  app-service-rules:
-#    image: nexus3.edgexfoundry.org:10004/docker-app-service-configurable:master
+#    image: edgexfoundry/docker-app-service-configurable:1.0.0
 #    ports:
 #      - "48100:48100"
 #    container_name: edgex-app-service-configurable-rules
@@ -394,7 +394,7 @@ services:
 #      - data
 
 #  rulesengine:
-#    image: nexus3.edgexfoundry.org:10004/docker-support-rulesengine:master
+#    image: edgexfoundry/docker-support-rulesengine:1.1.0
 #    ports:
 #      - "48075:48075"
 #    container_name: edgex-support-rulesengine
@@ -473,7 +473,7 @@ services:
     - command
 
   # device-random:
-  #   image: nexus3.edgexfoundry.org:10004/docker-device-random-go:1.1.0
+  #   image: edgexfoundry/docker-device-random-go:1.1.0
   #   ports:
   #     - "49988:49988"
   #   container_name: edgex-device-random
@@ -490,7 +490,7 @@ services:
   #     - command
   #
   # device-mqtt:
-  #   image: nexus3.edgexfoundry.org:10004/docker-device-mqtt-go:1.1.0
+  #   image: edgexfoundry/docker-device-mqtt-go:1.1.0
   #   ports:
   #     - "49982:49982"
   #   container_name: edgex-device-mqtt
@@ -507,7 +507,7 @@ services:
   #     - command
   #
   # device-modbus:
-  #   image: nexus3.edgexfoundry.org:10004/docker-device-modbus-go:1.1.0
+  #   image: edgexfoundry/docker-device-modbus-go:1.1.0
   #   ports:
   #     - "49991:49991"
   #   container_name: edgex-device-modbus
@@ -524,7 +524,7 @@ services:
   #     - command
   #
   # device-snmp:
-  #   image: nexus3.edgexfoundry.org:10004/docker-device-snmp-go:1.1.0
+  #   image: edgexfoundry/docker-device-snmp-go:1.1.0
   #   ports:
   #     - "49993:49993"
   #   container_name: edgex-device-snmp
